# my-own-database

./: .gitignore  CMakeLists.txt  database.cpp  main.cpp
2425S_27_s33276_UD/include/: database.h  handlers.h  helpers.h
2425S_27_s33276_UD/src/: handlers.cpp  helpers.cpp
include/: database.h  handlers.h  helpers.h
src/: database.cpp  main.cpp
